--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.5",
+    "sweetalert2-react-content": "^4.1.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
